Удалил ненужные методы, а так же неемного изменил все старые. Добавлен общий метод GetAll

--- a/SimpleMovieSearch/SimpleMovieSearch.csproj
+++ b/SimpleMovieSearch/SimpleMovieSearch.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\SimpleMovieSearch.Service\SimpleMovieSearch.Service.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\Account\" />
+  </ItemGroup>
+
 </Project>
